🎨 style(index.html, style.css): update profile image and adjust CSS styles for better visual appeal 📸 feat(images): add new square profile image for better aspect ratio The profile image in the index.html file has been updated from a rectangular image to a square one to improve the aspect ratio. The CSS styles have been adjusted to accommodate this change. The border-radius of the image has been changed to 9999px to maintain a circular appearance despite the change in image shape. The padding of the navigation links has been adjusted for better alignment and a z-index has been added to ensure the navigation stays on top of other elements. The new square profile image provides a better visual balance on the page.

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,8 @@ main > article {
 }
 
 section.personal-image > img {
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    border-radius: 9999px;
 }
 
 p.entry-date {
@@ -83,7 +84,8 @@ nav.nav-links {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 1em 0 0 3em;
+    padding: 10px 0 0 25px;
+    z-index: 20;
 } 
 
 nav.nav-links > ul {
